Search modal transition improvment Fixed author extra code Improvment for the post card title heading Improvment for the footer section spacing

--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -5,4 +5,8 @@
 .c-footer {
   padding: double($base-spacing-unit) 0;
   background-color: $bg-gray-light;
+
+  &__copy {
+    line-height: 1;
+  }
 }
