--- a/assets/sass/components/_social-nav.scss
+++ b/assets/sass/components/_social-nav.scss
@@ -3,6 +3,9 @@
 \*------------------------------------*/
 
 .c-social-nav {
+  line-height: 1;
+  margin-bottom: $base-spacing-unit + quarter($base-spacing-unit);
+
   &__item {
     display: inline-block;
   }
